--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# openapi generator
+src/lib/openapi/
+!src/lib/openapi/api.ts
