--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"prepare": "npm run smui-theme",
-		"smui-theme": "smui-theme compile static/smui.css -i src/theme"
+		"smui-theme": "smui-theme compile static/smui.css -i src/theme",
+		"generate-openapi-schemas": "openapi-generator-cli generate -g typescript-axios -i ./openapi/nile-openapi.yaml -o ./src/lib/openapi"
 	},
 	"devDependencies": {
+		"@openapitools/openapi-generator-cli": "^2.6.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
