--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 # openapi generator
-src/lib/openapi/
+src/lib/openapi/*
 !src/lib/openapi/api.ts
