--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@smui/button": "^7.0.0-beta.8",
-		"smui-theme": "^7.0.0-beta.8"
+		"smui-theme": "^7.0.0-beta.8",
+		"svelte-material-ui": "^7.0.0-beta.8"
 	}
 }
