--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
 		"eslint-plugin-svelte": "^2.26.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"smui-theme": "6.2.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-material-ui": "6.2.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
@@ -37,7 +39,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"smui-theme": "^7.0.0-beta.8",
-		"svelte-material-ui": "^7.0.0-beta.8"
+		"@smui/data-table": "^7.0.0-beta.8"
 	}
 }
