--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@smui/data-table": "^7.0.0-beta.8"
+		"@smui/button": "^7.0.0-beta.8",
+		"@smui/data-table": "^7.0.0-beta.8",
+		"@smui/dialog": "^7.0.0-beta.8",
+		"@smui/textfield": "^7.0.0-beta.8"
 	}
 }
