--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@smui/button": "^7.0.0-beta.8",
 		"@smui/data-table": "^7.0.0-beta.8",
 		"@smui/dialog": "^7.0.0-beta.8",
+		"@smui/icon-button": "^7.0.0-beta.8",
 		"@smui/textfield": "^7.0.0-beta.8"
 	}
 }
