--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"smui-theme": "smui-theme compile static/smui.css -i src/theme",
 		"generate-schemas": "openapi-generator-cli generate -g typescript-axios -i ./openapi/nile-openapi.yaml -o ./src/lib/openapi",
 		"update-nile": "cp ../nile/openapi/nile-openapi.yaml ./openapi/nile-openapi.yaml",
-		"update-openapi": "yarn update-nile && yarn generate-schemas && yarn format"
+		"update-openapi": "yarn update-nile && yarn generate-schemas && yarn format",
+		"run-e2e": "yarn playwright test --reporter=html,allure-playwright && yarn allure generate ./allure-results --clean && yarn allure open ./allure-report"
 	},
 	"devDependencies": {
 		"@openapitools/openapi-generator-cli": "^2.6.0",
@@ -25,6 +26,8 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"allure-commandline": "^2.22.1",
+		"allure-playwright": "^2.4.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
