--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@smui/icon-button": "^7.0.0-beta.8",
 		"@smui/select": "^7.0.0-beta.8",
 		"@smui/snackbar": "^7.0.0-beta.8",
-		"@smui/textfield": "^7.0.0-beta.8"
+		"@smui/textfield": "^7.0.0-beta.8",
+		"ci": "^2.2.0"
 	}
 }
