change run command

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Playwright Browsers
         run: yarn playwright install --with-deps
       - name: Run Playwright tests
-        run: yarn run-e2e
+        run: yarn run-ci-e2e
       - uses: actions/upload-artifact@v3
         if: always()
         with:
